--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <div class="main">
         <div class="overlay">
             <div class="title">
-                Offer Ends In</br>Hurry Up!
+                Offer Ends In
             </div>
             <div class="title" id="enddate">
-                25 March 2023 8pm
+                25 March 2023 8pm</br>Hurry Up!
             </div>
             <div class="col">
                 <div>
